--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,16 @@
-html, body {
+html {
 	width: 100%;
-	min-height: 100%;
+	height: 100%;
+	text-align: center;
+}
+
+body {
+	height: 100%;
 	text-align: center;
 }
 
 @media (min-width: 900px) {
-	html, body {
+	body {
 		background-image: url('background.jpeg');
 		background-position: center;
 		background-repeat: no-repeat;
